# dummy-medical-software

./: .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  qw.yml
.github/ISSUE_TEMPLATE/: design-input.yml  non-qw.md  non-qw.yml  user-need.yml
.github/workflows/: issue_update.yml  qw-pr-check.yml  qw.yml
.qw/: components.csv  conf.json
src/dummy/: example_work.py
tests/: test_input_1.py
